# todo-in-life

./: .gitignore  .prettierignore  Cargo.toml  Makefile  README.md  docker-compose.yml  package-lock.json  package.json  tsconfig.json  webpack.config.js
client/: .gitignore  package.json  tsconfig.json  tsconfig.node.json  vite.config.ts  webpack.config.js
client/dev-server/: constants.js  helper.js  server.js  vite-setup.js
client/dev-server/router/: main.js  todos.js
client/dev-server/ssr-load-modules/: login-server.tsx  signup-server.tsx  todos-server.tsx  top-server.tsx
client/dev-server/template/: index.html  login.html  signup.html  todos.html
client/src/: clientLogin.tsx  clientSignup.tsx  clientTodos.tsx  clientTop.tsx
client/src/components/context/: TodoContext.tsx
client/src/services/api/: todoApi.ts
client/src/utils/constants/: todoCategory.constants.ts
client/src/utils/helpers/: date.helpers.ts  errorResponse.helpers.ts
client/src/utils/styles/: react-datepicker.css
client/src/utils/types/: global.d.ts  todo.types.ts
docker/postgres/: Dockerfile
docker/rust/: Dockerfile
migrations/: 20231026222223_create_users.up.sql  20231026222238_create_todos.up.sql
migrations/2022-05-15-055423_create_users/: down.sql  up.sql
migrations/2022-05-22-014001_create_todos/: up.sql
migrations/2022-09-23-122119_create_users/: up.sql
migrations/2022-09-23-122416_create_todos/: down.sql  up.sql
src/: lib.rs  main.rs  manage_cookie.rs  repository.rs  schema.rs  scopes.rs  todos.rs  users.rs
src/scopes/: main_scope.rs  main_scopes.rs  todos_scope.rs
src/todos/: model_todos.rs  validate_todos_form.rs
src/users/: model.rs  model_users.rs  validate_form.rs  validate_users_form.rs
static/js/: client_app.tsx  client_index.tsx  client_login.tsx  client_signup.tsx  index.tsx
static/js/api/: todoApi.ts
static/js/common/: common.ts
static/js/components/: App.tsx  Index.tsx  Login.tsx  Signup.tsx
static/js/styles/: Global.tsx  GlobalTodoForm.tsx  GlobalUserForm.tsx
templates/: app.html  base.html  index.html  login.html  signup.html  todos.html  top.html
(+35 files in other folders)
