[package]
name = "todo-in-life"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.0.1"
chrono = { version = "0.4.19", features = ["serde"] }
diesel = { version = "1.4.8", features = ["mysql", "r2d2"] }
dotenv = "0.15.0"
env_logger = "0.9.0"
listenfd = "0.5.0"
tera = "1.15.0"
