[package]
name = "todo-in-life"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-files = "0.6.0"
actix-identity = "0.4.0"
actix-web = "4.2.1"
argon2 = "0.4.0"
chrono = { version = "0.4.22", features = ["serde"] }
diesel = { version = "2.0.0", features = ["postgres", "r2d2", "chrono", "uuid"] }
dotenv = "0.15.0"
env_logger = "0.9.0"
listenfd = "0.5.0"
rand = "0.8.5"
rand_core = { version = "0.6.3", features = ["std"] }
serde = { version = "1.0.145", features = ["derive"] }
serde_json = "1.0.85"
tera = "1.15.0"
uuid = { version = "1.1.2", features = ["serde"] }
validator = { version = "0.15.0", features = ["derive"] }
