[package]
name = "todo-in-life"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sqlx = { version = "0.7.2", features = [
    "postgres",
    "runtime-tokio-rustls",
    "chrono",
] }
actix-files = "0.6.0"
actix-identity = "0.6.0"
actix-session = { version = "0.8.0", features = ["cookie-session"] }
actix-web = "4.2.1"
argon2 = "0.5.2"
chrono = { version = "0.4.22", features = ["serde"] }
dotenv = "0.15.0"
rand = "0.8.5"
rand_core = { version = "0.6.3", features = ["std"] }
serde = { version = "1.0.145", features = ["derive"] }
serde_json = "1.0.85"
tera = "1.15.0"
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
validator = { version = "0.16.1", features = ["derive"] }
anyhow = "1.0.75"
thiserror = "1.0.50"
async-trait = "0.1.74"
